--- a/src/frontend/style.css
+++ b/src/frontend/style.css
@@ -1,3 +1,9 @@
+body {
+	margin: 0px;
+	padding: 0px;
+	font-size: 15px;
+  	line-height: 24px;
+}
 .quote-box {
 	text-align: center;
 	color: red;
